--- a/appui/package.json
+++ b/appui/package.json
@@ -6,6 +6,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
+    "tachyons": "^4.11.1",
+    "tachyons-cli": "^1.3.2",
     "web3": "^0.19.0"
   },
   "scripts": {
